plugins {
    id 'idea'
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '3.3.13'
    id 'org.sonarqube' version '2.6.1'
    id 'io.spring.dependency-management' version '1.1.7'
}


repositories {
    gradlePluginPortal()
    mavenCentral()
    maven {
        url System.getProperty("user.dir") + "/api/common"
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

// >>>>> building for different profiles
// >>>>> For configuration use -Pprofile=profile_name with run ("dev" is used by default)
loadConfiguration()

def loadConfiguration() {
    def profile = hasProperty("profile") ? profile : "dev"
    project.ext.setProperty("profile", profile)
}

apply from: "profiles.gradle"

// >>>>> applied plugins
task copyLaunchScripts(type: Copy) {
    from "$rootDir/scripts/pipeline-launch"
    into "$rootDir/api/src/main/resources/static/"
}

task copyCommitRunScripts(type: Copy) {
    from "$rootDir/scripts/commit-run-scripts/"
    into "$rootDir/api/src/main/resources/static/commit-run-scripts"
}

task copyFsAutoscalerScripts(type: Copy) {
    from "$rootDir/scripts/autoscaling/fsautoscale.sh"
    into "$rootDir/api/src/main/resources/static/"
}

task copyEmergencyNodeTerminationScript(type: Copy) {
    from "$rootDir/scripts/autoscaling/emergency_node_terminator.sh"
    into "$rootDir/api/src/main/resources/static/"
}

task copyLocalDtsStartupScripts(type: Copy) {
    from "$rootDir/scripts/dts/DeployDts.ps1", "$rootDir/scripts/dts/deploy_dts.sh"
    into "$rootDir/api/src/main/resources/static/"
}

task generateComponentsVersions(type: Exec) {
    commandLine "bash",
                "$project.rootDir/scripts/pipeline-scripts/generate_components_versions.sh",
                "$project.rootDir",
                "$rootDir/api/src/main/resources/static/components_versions.json"
}

bootJar {
    archiveFileName = "pipeline.jar"
    manifest {
        attributes(
                "Implementation-Version": version)
    }
}

// >>>>> Exclude tests through property defined in the build.gradle file
test {
    if (project.hasProperty('excludeTests')) {
        exclude project.property('excludeTests')
    }
    testLogging {
        events "passed", "skipped", "failed"
    }
    afterSuite { desc, result ->
        if (!desc.parent) { // will match the outermost suite
            println "Results: ${result.resultType} (${result.testCount} total, ${result.successfulTestCount} success, ${result.failedTestCount} failure, ${result.skippedTestCount} skipped)"
        }
    }
}

ext {
    versionElasticsearch = "6.8.3"
}

ext["elasticsearch.version"] = project.ext.versionElasticsearch

def apiDeps = [":client:buildUI", ":core:build", ":buildPipe", ":pipe-cli:build", ":pipe-cli:buildLinux",
":pipe-cli:buildWin", ":fs-browser:build", ":workflows:buildGpuStat", ":cloud-pipeline-webdav-client:buildWin",
":cloud-pipeline-webdav-client:buildLinux", ":cloud-pipeline-webdav-client:buildCli"]

build.mustRunAfter apiDeps
bootJar.mustRunAfter apiDeps

dependencies {
    implementation project(":core")
    implementation project(":cloud-pipeline-common:event-sourcing-java-client")

    configurations {
        all*.exclude module: 'spring-boot-starter-logging'
        all*.exclude group: 'commons-logging', module: 'commons-logging'
    }

    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2:3.5.3'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.session:spring-session-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
    implementation 'org.aspectj:aspectjweaver'
    implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta3'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework:spring-context'
    implementation 'org.springframework:spring-context-support'
    implementation 'com.auth0:java-jwt:3.1.0'
    implementation 'org.springframework.security:spring-security-acl'
    implementation 'com.jcraft:jsch:0.1.55'
    implementation 'com.coveo:saml-client:1.4.0'

    // Cache
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'redis.clients:jedis'

    // GCP
    implementation 'com.google.auth:google-auth-library-oauth2-http:0.10.0'
    implementation 'com.google.api-client:google-api-client:1.34.0'
    implementation 'com.google.apis:google-api-services-compute:v1-rev20220720-1.32.1'
    implementation 'com.google.apis:google-api-services-cloudbilling:v1-rev30-1.25.0'
    implementation 'com.google.apis:google-api-services-iamcredentials:v1-rev32-1.25.0'
    implementation 'com.google.cloud:google-cloud-storage:1.70.0'

    // DB
    implementation 'org.postgresql:postgresql:42.7.3'
    implementation 'com.mchange:c3p0:0.9.5.2'
    implementation 'org.hibernate.orm:hibernate-core:6.6.25.Final'
    runtimeOnly 'org.flywaydb:flyway-database-postgresql:10.0.0'
    implementation 'org.flywaydb:flyway-core:10.0.0'

    // Kubernetes
    implementation 'io.fabric8:kubernetes-client:3.0.3'
    implementation 'io.fabric8:kubernetes-model:3.0.3'
    testImplementation 'io.fabric8:openshift-client:2.2.7'

    // Lombok
    implementation 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'

    // Notifications
    implementation 'com.relayrides:pushy:0.9.3'
    implementation 'us.raudi.pushraven:Pushraven:1.0.2'

    // Apache Commons
    implementation 'commons-io:commons-io:2.16.1'
    implementation 'org.apache.commons:commons-lang3:3.17.0'
    implementation 'org.apache.commons:commons-collections4:4.0'
    implementation 'commons-validator:commons-validator:1.5.0'
    implementation 'org.apache.commons:commons-math3:3.6.1'

    // POI
    implementation 'org.apache.poi:poi:3.16'
    implementation 'org.apache.poi:poi-ooxml:3.16'

    // CSV
    implementation 'com.opencsv:opencsv:3.9'
    implementation 'org.apache.commons:commons-csv:1.5'

    // AWS
    implementation 'com.amazonaws:aws-java-sdk-ec2:1.12.256'
    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.256'
    implementation 'com.amazonaws:aws-java-sdk-sts:1.11.704'
    implementation 'com.amazonaws:aws-java-sdk-iam:1.11.704'
    implementation 'com.amazonaws:aws-java-sdk-fsx:1.12.770'
    implementation 'com.amazonaws:aws-java-sdk-route53:1.11.880'
    implementation 'com.amazonaws:aws-java-sdk-omics:1.12.717'
    implementation 'com.amazonaws:aws-java-sdk-pricing:1.12.780'

    // Azure
    implementation 'com.microsoft.azure:azure-mgmt-resources:1.19.0'
    implementation 'com.microsoft.azure:azure:1.19.0'
    implementation 'com.microsoft.azure:azure-storage-blob:11.0.0'

    // File Upload
    implementation 'org.apache.commons:commons-fileupload2-jakarta:2.0.0-M1'
    implementation 'org.apache.commons:commons-fileupload2-jakarta-servlet6:2.0.0-M4'

    // MapStruct
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    // Elasticsearch
    implementation 'org.elasticsearch.client:elasticsearch-rest-client:6.8.3'
    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:6.8.3'
    testImplementation 'org.elasticsearch.client:transport:6.8.3'

    // Scheduling
    implementation 'org.quartz-scheduler:quartz:2.3.2'

    // LDAP
    implementation 'org.springframework.ldap:spring-ldap-core:2.3.2.RELEASE'

    // Tests
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.3.13'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.wiremock:wiremock-standalone:3.9.2'
    testImplementation 'org.mockito:mockito-core:5.12.0'
    testImplementation 'org.mockito:mockito-inline:5.2.0'

    // ShedLock
    implementation 'net.javacrumbs.shedlock:shedlock-spring:3.0.0'
    implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:3.0.0'

    // Utilities
    implementation 'dnsjava:dnsjava:3.4.3'
    implementation 'org.apache.velocity:velocity:1.7'
    implementation('io.reflectoring.diffparser:diffparser:1.4')
}

// >>>>> processes profiles
processResources.dependsOn.addAll([copyConfiguration, copyLaunchScripts, copyCommitRunScripts, copyFsAutoscalerScripts,
                                   copyLocalDtsStartupScripts, generateComponentsVersions,
                                   copyEmergencyNodeTerminationScript])

compileJava {
    options.compilerArgs << "-Xmaxerrs" << "100000"
}

test {
    useJUnitPlatform()
    //exclude '**/*Test.class'
    include '**/*ControllerTest.class'
    jvmArgs = ['-Xmx2g', '-Xms512m']
}
